--- a/css/reset.css
+++ b/css/reset.css
@@ -38,3 +38,12 @@ a:link,a:visited{
   color: #2D2C2C;
   text-decoration: none;
 }
+
+@media screen and (max-width:1000px){
+
+
+@media screen and (max-width:750px){
+  p{
+    font-size: 14px;
+    line-height: 2em;
+  }
