--- a/css/reset.css
+++ b/css/reset.css
@@ -43,7 +43,13 @@ a:link,a:visited{
 
 
 @media screen and (max-width:750px){
-  p{
-    font-size: 14px;
-    line-height: 2em;
-  }
+h3{
+  font-size: 15px;
+}
+
+p{
+  font-size: 11px;
+  line-height: 2em;
+}
+}
+}
