--- a/css/style.css
+++ b/css/style.css
@@ -162,15 +162,14 @@ button.nav_toggle i:nth-child(2) {
 }
 
 #about{
+  display: flex;
   max-width: 100%;
   margin: 15% 0;
-  justify-content: center;
 }
 
 .slider_block{
   max-width: 50%;
   object-fit: cover;
-  margin: 0 auto;
 }
 
 ul.slider{
@@ -184,13 +183,13 @@ ul.slider img{
   width: 70%;
   height: auto;
   object-fit: cover;
-  margin: 0 auto;
+  margin: 0 0 0 30%;
 }
 
 .about_text{
   max-width: 100%;
   height: auto;
-  margin: 0 5%;
+  margin-left: 8%;
   text-align: center;
 }
 
@@ -316,6 +315,11 @@ p.tax{
   transition: opacity 1s, visibility 1s, transform 1s;
 }
 
+.staff-box p{
+  margin: 0;
+  line-height: 2em;
+}
+
 /* ニュース */
 #news{
   width: 100%;
@@ -393,7 +397,7 @@ p.n_viewbox:hover{
   display: flex;
   width: 100%;
   height: auto;
-  margin: 13% 0;
+  margin: 10% 0;
 }
 
 .access-box1{
@@ -435,36 +439,79 @@ p.n_viewbox:hover{
 footer{
   width: 100%;
   height: auto;
-  background-color: #FAFCFB;
-  /* padding: 3%; */
   justify-content: center;
   flex-direction: column;
 }
 
 #footer_block{
+  position: relative;
   width: 100%;
   text-align: center;
-  padding: 2%;
+  display: grid;
 }
 
-footer img{
-  width: 13%;
+.backimg{
+  width: 100%;
+}
+
+.footerbox{
+  position: absolute;
+  top: 15%;
+  left: 39%;
+  max-width: 100%;
   height: auto;
+}
+
+img.footerlogo{
+  width: 65%;
+  height: auto;
+  color: #565555;
 }
 
 .sns-list{
   max-width: 100%;
   display: block;
   margin-top: 14px;
+  font-size: 1em;
 }
 
 .sns-list i,a:link,a:visited{
-  margin: 0 10px;
+  margin: 0 5px;
   color: #565555;
 }
 
+.contact-list{
+  width: 100%;
+  display: flex;
+  font-size: 1.5em;
+  margin: 5%;
+}
+
+.contact-list i,a:link,a:visited{
+  color: #565555;
+}
+
+.contact-list i,.contact-list p{
+  height: auto;
+}
+
+.contact-list p{
+  margin: 0;
+  font-size: 14px;
+}
+
 #footer_block p{
+  width: 100%;
+  height: auto;
   margin-bottom: 0;
+}
+
+.phone{
+  display: flex;
+}
+
+.mail{
+  display: flex;
 }
 
 @media screen and (max-width:1000px){
@@ -496,8 +543,21 @@ button.nav_toggle{
   padding: 0;
 }
 
+#about{
+  display: block;
+}
+
 ul.slider img{
   width: 100%;
+  margin: 0 auto;
+}
+
+.slider_block{
+  margin: 0 auto;
+}
+
+.about_text{
+  margin: 0 auto;
 }
 
 /* メニュー */
@@ -575,11 +635,12 @@ p.tax{
 }
 
 .staff-box h3{
-  margin-top: 15px;
+  margin: 15px 0 0 0;
   font-size: 10px;
 }
 
 .staff-box p{
+  margin: 0;
   font-size: 10px;
 }
 
@@ -657,6 +718,34 @@ p.n_viewbox:hover{
 
 .access-text p{
   text-align: center;
+  margin: 0;
+}
+
+#footer_block{
+  margin: 0 auto;
+}
+
+#footer_block p{
+  font-size: 10px;
+  margin: 0;
+  line-height: 0.5em;
+}
+
+.footerbox{
+  top: 0;
+  left: 0;
+  height: auto;
+}
+
+img.footerlogo{
+  width: 30%;
+}
+
+.sns-list{
+  margin: 0;
+}
+
+.contact-list{
   margin: 0;
 }
 
