--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ ul.slider img{
   margin-right: 250px;
 }
 
-h3{
+.menu_wrap h3{
   margin: 45px 0 10px 0;
   font-family: 'Jost',sans-serif;
   font-weight: lighter;
@@ -318,6 +318,28 @@ p.tax{
 .staff-box p{
   margin: 0;
   line-height: 2em;
+}
+
+.staff-box h3{
+  display: inline-block;
+  position: relative;
+  font-weight: lighter;
+}
+
+.staff-box h3::before{
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -16px;
+  display: inline-block;
+  width: 50px;
+  height: 2px;
+  -moz-transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translate(-50%);
+  background-color: #565555;
+  margin-bottom: 5%;
 }
 
 /* ニュース */
@@ -443,6 +465,10 @@ footer{
   flex-direction: column;
 }
 
+footer p{
+  font-size: 12px;
+}
+
 #footer_block{
   position: relative;
   width: 100%;
@@ -452,18 +478,19 @@ footer{
 
 .backimg{
   width: 100%;
+  height: 180px;
 }
 
 .footerbox{
   position: absolute;
-  top: 15%;
-  left: 39%;
-  max-width: 100%;
+  top: 11%;
+  left: 35%;
+  width: 400px;
   height: auto;
 }
 
 img.footerlogo{
-  width: 65%;
+  width: 180px;
   height: auto;
   color: #565555;
 }
@@ -471,8 +498,8 @@ img.footerlogo{
 .sns-list{
   max-width: 100%;
   display: block;
-  margin-top: 14px;
-  font-size: 1em;
+  margin-top: 5px;
+  font-size: 0.8em;
 }
 
 .sns-list i,a:link,a:visited{
@@ -483,35 +510,30 @@ img.footerlogo{
 .contact-list{
   width: 100%;
   display: flex;
-  font-size: 1.5em;
-  margin: 5%;
+  font-size: 0.9em;
+  justify-content: center;
+  align-items: center;
 }
 
 .contact-list i,a:link,a:visited{
   color: #565555;
 }
 
-.contact-list i,.contact-list p{
+.contact-list i{
   height: auto;
-}
-
-.contact-list p{
-  margin: 0;
-  font-size: 14px;
 }
 
 #footer_block p{
   width: 100%;
   height: auto;
-  margin-bottom: 0;
+  margin: 0;
 }
 
-.phone{
+.contact-list span{
   display: flex;
-}
-
-.mail{
-  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 5%;
 }
 
 @media screen and (max-width:1000px){
@@ -635,12 +657,31 @@ p.tax{
 }
 
 .staff-box h3{
-  margin: 15px 0 0 0;
+  display: inline-block;
+  position: relative;
+  font-weight: lighter;
+  margin: 5px 0 0 0;
   font-size: 10px;
 }
 
+.staff-box h3::before{
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -8px;
+  display: inline-block;
+  width: 15px;
+  height: 1px;
+  -moz-transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translate(-50%);
+  background-color: #565555;
+  margin: 5% 0;
+}
+
 .staff-box p{
-  margin: 0;
+  margin-top: 10px;
   font-size: 10px;
 }
 
@@ -722,7 +763,7 @@ p.n_viewbox:hover{
 }
 
 #footer_block{
-  margin: 0 auto;
+  justify-content: center;
 }
 
 #footer_block p{
@@ -732,13 +773,18 @@ p.n_viewbox:hover{
 }
 
 .footerbox{
-  top: 0;
-  left: 0;
+  width: 334px;
+  top: 5px;
+  left: 20px;
+  height: auto;
+}
+
+.backimg{
   height: auto;
 }
 
 img.footerlogo{
-  width: 30%;
+  width: 20%;
 }
 
 .sns-list{
@@ -746,7 +792,7 @@ img.footerlogo{
 }
 
 .contact-list{
-  margin: 0;
+  margin: 0 auto;
 }
 
 }
