--- a/css/style.css
+++ b/css/style.css
@@ -478,12 +478,12 @@ footer p{
 
 .backimg{
   width: 100%;
-  height: 180px;
+  height: 230px;
 }
 
 .footerbox{
   position: absolute;
-  top: 11%;
+  top: 13px;
   left: 35%;
   width: 400px;
   height: auto;
@@ -493,12 +493,21 @@ img.footerlogo{
   width: 180px;
   height: auto;
   color: #565555;
+  margin-bottom: 15px;
+}
+
+span.footerboder{
+  display: block;
+  width: 40px;
+  height: 2px;
+  background-color: #565555;
+  margin: 0 auto;
 }
 
 .sns-list{
   max-width: 100%;
   display: block;
-  margin-top: 5px;
+  margin: 19px 0 10px 0;
   font-size: 0.8em;
 }
 
@@ -523,17 +532,21 @@ img.footerlogo{
   height: auto;
 }
 
+.fa-phone:before,.fa-envelope::before{
+  margin: 5px;
+}
+
 #footer_block p{
   width: 100%;
   height: auto;
-  margin: 0;
+  margin-top: 18px;
 }
 
 .contact-list span{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 5%;
+  margin: 0 4%;
 }
 
 @media screen and (max-width:1000px){
@@ -785,6 +798,22 @@ p.n_viewbox:hover{
 
 img.footerlogo{
   width: 20%;
+}
+
+.footerlogo::before{
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -8px;
+  display: inline-block;
+  width: 15px;
+  height: 1px;
+  -moz-transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translate(-50%);
+  background-color: #565555;
+  margin: 5% 0;
 }
 
 .sns-list{
